stuck on fix for asc,paginate,search after filtering the dates

--- a/resources/css/bootstrapGlobal.css
+++ b/resources/css/bootstrapGlobal.css
@@ -2,3 +2,7 @@
 a:not(.btn) {
   text-decoration: none;
 }
+
+a {
+  text-decoration: none;
+}
